css Home Page + creation page trajet et horaire

--- a/frontend/my-app/src/index.css
+++ b/frontend/my-app/src/index.css
@@ -5,9 +5,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f3f3f3;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1,
+h2,
+h3,
+p,
+a {
+  color: #2e2e2e;
+}
+
+#root {
+  width: 100%;
+  text-align: center;
 }
