--- a/frontend/my-app/src/Header/Header.css
+++ b/frontend/my-app/src/Header/Header.css
@@ -1,13 +1,15 @@
 #header {
-    width: 100%;
     background-color: white;
     display: flex;
     justify-content: center;
     padding: 10px;
-    border-bottom: 1px solid black;
+    box-shadow: 0px 3px 5px rgba(10, 10, 10, 0.2);
 }
 
 a {
-    width: 25%;
     max-width: 200px;
+}
+
+#logo {
+    width: 150px;
 }
