--- a/frontend/my-app/src/Home/Home.css
+++ b/frontend/my-app/src/Home/Home.css
@@ -13,7 +13,6 @@
     width: 75%;
     max-width: 300px;
     background-color: #ffffff;
-    /* border: 1px solid #474747; */
     justify-content: space-between;
     border-radius: 5px;
     align-items: center;
@@ -27,6 +26,6 @@
     max-width: 250px;
 }
 
-img {
+.fleche {
     width: 50px;
 }
