--- a/frontend/my-app/src/index.css
+++ b/frontend/my-app/src/index.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f3f3f3;
+  height: 100%
 }
 
 code {
@@ -23,5 +28,7 @@ a {
 
 #root {
   width: 100%;
+  height: 100%;
   text-align: center;
+  position: relative;
 }
