--- a/frontend/my-app/src/EasterEgg/Sudoku.css
+++ b/frontend/my-app/src/EasterEgg/Sudoku.css
@@ -23,9 +23,9 @@
     align-items: center;
 }
 
-#row1 > button, 
-#row2 > button,
-#row3 > button {
+#row1>button,
+#row2>button,
+#row3>button {
     width: 40px;
     height: 40px;
 }
@@ -54,4 +54,17 @@
 
 #DifficultyButtons {
     margin-bottom: 20px;
+}
+
+
+@media screen and (max-width: 380px) {
+    .digit {
+        width: 30px;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+    }
 }
